app/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host: vprofile.46.101.123.89.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vprofile-web
              port:
                number: 80
